Initial, primitive scrollbar implemented

--- a/TimeBeamTest/TimeBeamTest.csproj
+++ b/TimeBeamTest/TimeBeamTest.csproj
@@ -74,6 +74,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimeBeam\TimeBeam.csproj">
+      <Project>{5F95B084-2BF9-4A8D-8D83-F50FBE1B959C}</Project>
+      <Name>TimeBeam</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
