--- a/TimeBeam/TimeBeam.csproj
+++ b/TimeBeam/TimeBeam.csproj
@@ -42,17 +42,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scrollbar.cs">
+    <Compile Include="Scrollbar\HorizontalScrollbar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Scrollbar.Designer.cs">
-      <DependentUpon>Scrollbar.cs</DependentUpon>
+    <Compile Include="Scrollbar\HorizontalScrollbar.Designer.cs">
+      <DependentUpon>HorizontalScrollbar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Scrollbar\AbstractScrollbar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Scrollbar\AbstractScrollbar.Designer.cs">
+      <DependentUpon>AbstractScrollbar.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scrollbar\AbstractScrollbar.resx">
+      <DependentUpon>AbstractScrollbar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scrollbar\HorizontalScrollbar.resx">
+      <DependentUpon>HorizontalScrollbar.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.TimeStamp" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_AssemblyInfoFilename="TimeBeam\Properties\AssemblyInfo.cs" />
+      <UserProperties BuildVersion_AssemblyInfoFilename="TimeBeam\Properties\AssemblyInfo.cs" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.TimeStamp" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
