--- a/TimeBeamTest/TimeBeamTest.csproj
+++ b/TimeBeamTest/TimeBeamTest.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestObjects\AdjustMyLength.cs" />
     <Compile Include="TimeBeamDemoForm.cs">
       <SubType>Form</SubType>
     </Compile>
