--- a/TimeBeam/TimeBeam.csproj
+++ b/TimeBeam/TimeBeam.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Helper\ColorHelper.cs" />
     <Compile Include="Helper\Extensions.cs" />
     <Compile Include="Helper\RectangleHelper.cs" />
+    <Compile Include="Helper\SurrogateHelper.cs" />
     <Compile Include="ITimelineTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scrollbar\VerticalScrollbar.cs">
@@ -64,6 +65,7 @@
     <Compile Include="Scrollbar\AbstractScrollbar.Designer.cs">
       <DependentUpon>AbstractScrollbar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Surrogates\TrackSurrogate.cs" />
     <Compile Include="Timeline.cs">
       <SubType>UserControl</SubType>
     </Compile>
