Added initial code for splines on the splineline

--- a/TimeBeam/TimeBeam.csproj
+++ b/TimeBeam/TimeBeam.csproj
@@ -92,7 +92,7 @@
       <DependentUpon>AbstractScrollbar.cs</DependentUpon>
     </Compile>
     <Compile Include="Splineline.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Splineline.Designer.cs">
       <DependentUpon>Splineline.cs</DependentUpon>
