--- a/TimeBeamTest/TimeBeamTest.csproj
+++ b/TimeBeamTest/TimeBeamTest.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="TestObjects\AdjustMyLength.cs" />
     <Compile Include="TestObjects\AdjustMyParts.cs" />
+    <Compile Include="TestObjects\LinearSplineSegment.cs" />
     <Compile Include="TimeBeamClock.cs" />
     <Compile Include="TimeBeamDemoForm.cs">
       <SubType>Form</SubType>
